springBootMongo.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: springbootdeployment
spec:
  replicas: 2
  selector:
    matchLabels:
      app: springboot
  template:
    metadata:
      name: springapppod
      labels:
        app: springboot
    spec:
      containers:
        - image: aewejedevs/springapp
          name: springboot
          ports:
            - containerPort: 8080
---
# Node Port Service For SpringApp
apiVersion: v1
kind: Service
metadata:
  name: springboot
spec:
  type: NodePort
  ports:
    - port: 8080
      targetPort: 8080
      nodePort: 30300
  selector:
    app: springboot
---
# Mongo Node Port RC
apiVersion: v1
kind: Service
metadata:
  name: mongo
spec:
  type: ClusterIP
  ports:
    - port: 27017
      targetPort: 27017
  selector:
    app: mongo
